How can I get rid of this Eclipse crap?